# papayoo

./: README.md  main.py  pyproject.toml
src/papayoo/: card.py  game.py  player.py
